--- a/style.css
+++ b/style.css
@@ -59,6 +59,9 @@ header h1 {
 }
 
 .section1 p {
+    margin-left:50%;
+    transform: translate(-50%, 0);    
+    width: 70%;
     color: rgba(255, 255, 255, 0.7);
     font-size: 30px;
     font-weight: bold;
