--- a/style.css
+++ b/style.css
@@ -27,12 +27,70 @@ body {
     position: relative;
 }
 
-header {
+
+
+.sky .cloud {
+    margin-left: -200px;
+    margin-top: -178px;
+}
+
+
+
+.cloudsky {
+    position: absolute;
+    transform: rotateZ(180deg);
+    bottom: -200px;
+    left: -200px;
+}
+
+
+.sky {
     background: linear-gradient(rgba(255, 255, 255, 1) 0%, rgba(0, 0, 0, 0)99%);
 }
 
-header h1 {
 
+header{
+    position: absolute;
+    top:0;
+    z-index:2;
+    color: aliceblue;
+    width:100%;
+}
+
+
+.section1 div {
+    clip-path: circle(30px at 50% 100px);
+
+    padding: 20px;
+    border-radius: 50px;
+    margin-left: 50%;
+    transform: translate(-50%, 0);
+    width: 70%;
+    background: #f5a03b;
+    transition: 1s all;
+}
+
+
+
+
+.space {
+    position: relative;
+    height: 1500px;
+    background: rgb(31, 0, 82);
+    background: linear-gradient(180deg, rgba(31, 0, 82, 1) 0%, rgba(9, 9, 121, 1) 50%, rgba(55, 152, 250, 1) 100%);
+}
+
+.color-gradient {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top:0;
+   background: rgb(31,0,82);
+background: linear-gradient(180deg, rgba(31,0,82,0) 0%, rgba(31,0,82,1) 59%, rgba(9,9,121,1) 88%);
+}
+
+.space h1 {
+    font-size: 50px;
     opacity: 0.8;
     font-family: cloudy;
     color: #3798fa;
@@ -40,18 +98,31 @@ header h1 {
     top: 50px;
     left: 50%;
     transform: translate(-50%, -50%);
+
 }
 
-.cloud {
-    background: linear-gradient(rgba(255, 255, 255, 1) 0%, rgba(0, 0, 0, 0)90%);
-    margin-left: -200px;
-    margin-top: -200px;
+
+
+
+
+.section1 div:hover {
+    background: white;
+    clip-path: circle(200% at 50% 8%);
 }
 
+
+.section1 div:hover .info1 {
+    opacity: 0;
+}
+
+.info1 {
+    transition: 0.5s all;
+}
 
 
 .section1 {
-    color: rgba(255, 255, 255, 0.6);
+
+    color: rgba(0, 0, 0, 1);
     font-size: 30px;
     font-weight: bold;
     margin-top: 300px;
@@ -59,10 +130,8 @@ header h1 {
 }
 
 .section1 p {
-    margin-left:50%;
-    transform: translate(-50%, 0);    
-    width: 70%;
-    color: rgba(255, 255, 255, 0.7);
+
+
     font-size: 30px;
     font-weight: bold;
     margin-top: 200px;
@@ -78,7 +147,7 @@ header h1 {
 
 
 #cloud1 {
-        opacity: 0.7;
+    opacity: 0.7;
 
     margin-top: 0%;
     margin-right: -1700%;
@@ -93,7 +162,7 @@ header h1 {
 }
 
 #cloud3 {
-        opacity: 0.7;
+    opacity: 0.7;
 
     margin-top: 120%;
     margin-right: -1500%;
@@ -101,7 +170,7 @@ header h1 {
 }
 
 #cloud4 {
-        opacity: 0.7;
+    opacity: 0.7;
 
     margin-top: 50%;
     margin-right: -500%;
@@ -109,7 +178,7 @@ header h1 {
 }
 
 #cloud5 {
-        opacity: 0.9;
+    opacity: 0.9;
 
     margin-top: 100%;
     margin-right: -100%;
