--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body {
 
 
 
+
 .sky .cloud {
     margin-left: -200px;
     margin-top: -178px;
@@ -43,11 +44,42 @@ body {
     left: -200px;
 }
 
-
+@keyframes floating {
+    from 	{ transform: translate(-10px,  10px); }
+	25%		{ transform: translate(-20px, 50px); } 
+    75%		{ transform: translate(30px, 0px); } 
+    to   	{ transform: translate(-10px, 10px); }    
+}
 .sky {
     background: linear-gradient(rgba(255, 255, 255, 1) 0%, rgba(0, 0, 0, 0)99%);
 }
-
+.satellite{
+    position:absolute;
+    bottom:1100px;
+    right:25%;
+    z-index:3;
+    transition:all 0.3s linear;
+    
+	animation-name:floating ;
+    animation-duration: 15s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    
+}
+.astronaut{
+    position:absolute;
+    bottom:800px;
+    left:20%;
+    z-index:5;
+    
+    transition:all 0.3s linear;
+    
+	animation-name:floating ;
+    animation-duration: 20s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    transform: scaleX(-1);
+}
 
 header{
     position: absolute;
@@ -74,10 +106,11 @@ header{
 
 
 .space {
+    
     position: relative;
     height: 1500px;
-    background: rgb(31, 0, 82);
-    background: linear-gradient(180deg, rgba(31, 0, 82, 1) 0%, rgba(9, 9, 121, 1) 50%, rgba(55, 152, 250, 1) 100%);
+    background: rgb(13,0,33);
+background: linear-gradient(180deg, rgba(13,0,33,1) 26%, rgba(9,9,121,1) 100%);
 }
 
 .color-gradient {
