--- a/style.css
+++ b/style.css
@@ -66,6 +66,15 @@ body {
     animation-timing-function: ease-in-out;
     
 }
+
+
+.stars{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
+
 .astronaut{
     position:absolute;
     bottom:800px;
@@ -222,4 +231,133 @@ background: linear-gradient(180deg, rgba(31,0,82,0) 0%, rgba(31,0,82,1) 59%, rgb
     margin-top: 20%;
     margin-right: -100%;
 
+}
+
+
+
+* {
+  box-sizing: border-box;
+}
+
+
+
+.sky-container {
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  
+  
+  transform: rotateZ(45deg);
+}
+
+
+
+.star {
+  position: absolute;
+  top: 25%;
+  left: 25%;
+  height: 2px;
+  background: linear-gradient(-45deg, yellow, rgba(0, 0, 255, 0));
+  filter: drop-shadow(0 0 6px yellow);
+  animation: tail 8000ms ease-in-out infinite, shooting 8000ms ease-in-out infinite;
+}
+
+.star::before, .star::after {
+  position: absolute;
+  content: '';
+  top: calc(50% - 1px);
+  right: 0;
+  height: 2px;
+  background: linear-gradient(-45deg, rgba(0, 0, 255, 0), yellow, rgba(0, 0, 255, 0));
+  border-radius: 100%;
+  transform: translateX(50%) rotateZ(45deg);
+  animation: shining 6000ms ease-in-out infinite;
+}
+
+.star::after {
+  transform: translateX(50%) rotateZ(-45deg);
+}
+
+.star:nth-child(1) {
+  top: calc(20% - 200px);
+  left: calc(60% - 300px);
+  animation-delay: 650ms;
+}
+.star:nth-child(1)::before, .star:nth-child(1)::after {
+  animation-delay: 650ms;
+}
+
+.star:nth-child(2) {
+  top: calc(70% - -50px);
+  left: calc(20% - 190px);
+  animation-delay: 150ms;
+}
+.star:nth-child(2)::before, .star:nth-child(2)::after {
+  animation-delay: 150ms;
+}
+
+.star:nth-child(3) {
+  top: calc(30% - -90px);
+  left: calc(60% - 200px);
+  animation-delay: 2600ms;
+}
+.star:nth-child(3)::before, .star:nth-child(3)::after {
+  animation-delay: 2600ms;
+}
+
+.star:nth-child(4) {
+  top: calc(5% - 50px);
+  left: calc(90% - 250px);
+  animation-delay: 6700ms;
+}
+.star:nth-child(4)::before, .star:nth-child(4)::after {
+  animation-delay: 6700ms;
+}
+
+.star:nth-child(5) {
+  top: calc(80% - -190px);
+  left: calc(20% - 200px);
+  animation-delay: 2100ms;
+}
+.star:nth-child(5)::before, .star:nth-child(5)::after {
+  animation-delay: 2100ms;
+}
+
+
+
+
+/* Animations */
+@keyframes tail {
+  0% {
+    width: 0;
+  }
+  
+  30% {
+    width: 100px;
+  }
+  
+  100% {
+    width: 0;
+  }
+}
+
+@keyframes shining {
+  0% {
+    width: 0;
+  }
+  50% {
+    width: 30px;
+  }
+  100% {
+    width: 0;
+  }
+}
+
+@keyframes shooting {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(320px);
+  }
 }
